Added new changes

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -41,7 +41,9 @@
     -->
     <title>React App</title>
   </head>
-  <body>
+  <body
+    class="[&::-webkit-scrollbar]:w-2 [&::-webkit-scrollbar-track]:bg-[rgba(231,229,229,0.64)] [&::-webkit-scrollbar-thumb]:bg-blue-600 [&::-webkit-scrollbar-track]:rounded-lg [&::-webkit-scrollbar-thumb]:rounded-lg"
+  >
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
